# esogu_toyds

./: .gitignore  README.md  README.md_  config.json  download_data.sh  mlcv_pointnet2.py  sample.py  sample_raw.py  shoe.ply  train.py  train_notebook.ipynb
sampler/: .clang-format  .vimspector.json  CMakeLists.txt
sampler/.cache/clangd/index/: cli_example.cpp.CA46855A404A5D8E.idx  loader.cpp.08F3CE245F586688.idx  loader.h.65FBC2C6185E9004.idx  main.cpp.76756843881A8652.idx  samp_par.cpp.87E747455B498385.idx  sampler.cpp.37C5FCD8547E12D1.idx  sampler.cpp.670320FF23214908.idx  sampler.h.03FCAAB660235832.idx  sampler.h.9D84ADAFB3C7E158.idx
sampler/include/: sampler.h
sampler/src/: .vimspector.json  main  main.cpp  sampler.cpp
